name:                edit
version:             0.1.0.0
synopsis:            A monad for rewriting things.
homepage:            https://github.com/theindigamer/edit
license:             BSD3
license-file:        LICENSE
author:              Varun Gandhi <theindigamer15@gmail.com>
maintainer:          Varun Gandhi <theindigamer15@gmail.com>
copyright:           Varun Gandhi 2018
category:            Data
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

flag comonad_instance
  description: Adds comonad as a dependency to provide a Comonad instance.
  default: False
  manual:  True

flag uniplate_examples
  description: Build the uniplate-based examples in the tutorial.
  default: False
  manual:  True

library
  exposed-modules:     Data.Edit
                       Data.Edit.Tutorial
                       Control.Monad.Trans.Edit
  build-depends:       base    >= 4.9 && < 4.12
                     , deepseq >= 1.1 && < 1.5
                     , transformers >= 0.5 && < 0.6
  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wnoncanonical-monad-instances
                       -Wnoncanonical-monoid-instances
                       -Wcompat
  hs-source-dirs:      src
  default-language:    Haskell2010
  if flag(comonad_instance)
    CPP-options:       -DWITH_COMONAD_INSTANCE
    build-depends:     comonad
  if flag(uniplate_examples)
    CPP-options:       -DUNIPLATE_EXAMPLES
    build-depends:     uniplate >= 1.6 && < 1.7

test-suite test-edit
  type:              exitcode-stdio-1.0
  hs-source-dirs:    tests
  main-is:           Spec.hs
  other-modules:     Imports
                     SipHash
                     Utils
  build-Depends:     base
                   , edit
                   , doctest    >= 0.13 && < 0.15
                   , QuickCheck >= 2.11 && < 2.12
                   , uniplate   >= 1.16 && < 1.17
                   , comonad    >= 5.0  && < 5.1
  ghc-options:       -Wall -threaded
  default-language:  Haskell2010
