name:                edit
version:             0.0.1.1
synopsis:            A monad for rewriting things.
homepage:            https://github.com/theindigamer/edit
license:             BSD3
license-file:        LICENSE
author:              Varun Gandhi <theindigamer15@gmail.com>
maintainer:          Varun Gandhi <theindigamer15@gmail.com>
copyright:           Varun Gandhi 2018
category:            Data
build-type:          Simple
extra-source-files:  ChangeLog.md, Readme.md
cabal-version:       >=1.10
description:
   Edit is a monad for rewriting things.

source-repository head
 type:     git
 location: https://github.com/theindigamer/edit.git

flag arbitrary_instance
  description: Adds QuickCheck as a dependency to provide an Arbitrary instance.
  default: False
  manual:  True

flag comonad_instance
  description: Adds comonad as a dependency to provide a Comonad instance.
  default: False
  manual:  True

flag tutorial
  description: Build the tutorial. Adds dependencies on uniplate and containers.
  default: False
  manual:  True

library
  exposed-modules:     Data.Edit
                       Data.Edit.Tutorial
                       Control.Monad.Trans.Edit
  build-depends:       base    >= 4.9 && < 4.12
                     , deepseq >= 1.1 && < 1.5
                     , transformers >= 0.5 && < 0.6
  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wnoncanonical-monad-instances
                       -Wnoncanonical-monoid-instances
                       -Wcompat
  hs-source-dirs:      src
  default-language:    Haskell2010
  if flag(arbitrary_instance)
    CPP-options:       -DWITH_ARBITRARY_INSTANCE
    build-depends:     QuickCheck >= 2.10 && < 2.12
  if flag(comonad_instance)
    CPP-options:       -DWITH_COMONAD_INSTANCE
    build-depends:     comonad
  if flag(tutorial)
    CPP-options:       -DTUTORIAL
    build-depends:     uniplate >= 1.6 && < 1.7
                     , containers >= 0.5.8.1 && < 0.5.12

test-suite test-edit
  type:              exitcode-stdio-1.0
  hs-source-dirs:    tests
  main-is:           Driver.hs
  other-modules:     Data.EditSpec
                     Control.Monad.Trans.EditSpec
  build-Depends:     base
                   , edit
                   , doctest    >= 0.13 && < 0.15
                   , QuickCheck >= 2.10 && < 2.12
                   , uniplate   >= 1.6 && < 1.7
                   , comonad    >= 5.0  && < 5.1
                   , tasty      >= 1.0 && < 1.1
                   , tasty-discover   >= 4.2 && < 4.3
                   , tasty-quickcheck >= 0.9 && < 0.10
  ghc-options:       -Wall -threaded
  default-language:  Haskell2010

